--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
   <script src="https://kit.fontawesome.com/184184e7df.js" crossorigin="anonymous"></script>
 
   <title>SOS Red</title>
-  <link rel="stylesheet" href="styles.css">
+   <!-- Compiled and minified CSS -->
+   <link rel="stylesheet" href="css/cosafea.css">
+   <link rel="stylesheet" href="styles.css">
+
+   <!-- Compiled and minified JavaScript -->
+  
+
+
 </head>
 
 <style>
@@ -42,8 +49,33 @@
 <body>
 
   <header>
-
-    <img class="logo" src="./assets/logo.png" alt="">
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper" >
+          <a href="#!" class="brand-logo"><img class="brand-logo" src="./assets/logo2.png" alt=""></a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+          <ul class="right hide-on-med-and-down">
+            <li class="navlink"><a href="#home">Home</a></li>
+            <li class="navlink"><a href="#servicios">Servicios</a></li>
+            <li class="navlink"><a href="#quienes">Quiénes somos</a></li>
+            <li class="navlink"><a href="#novedades">Novedades</a></li>
+            <li class="navlink"><a href="#separte">Sé parte</a></li>
+            <li class="navlink"><a href="#portalcorporativo">Portal Corporativo</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    
+  
+    <ul class="sidenav" id="mobile-demo">
+      <li class="navlink"><a href="#home">Home</a></li>
+      <li class="navlink"><a href="#servicios">Servicios</a></li>
+      <li class="navlink"><a href="#quienes">Quiénes somos</a></li>
+      <li class="navlink"><a href="#novedades">Novedades</a></li>
+      <li class="navlink"><a href="#separte">Sé parte</a></li>
+      <li class="navlink"><a href="#portalcorporativo">Portal Corporativo</a></li>
+    </ul>
+    <!-- <img class="logo" src="./assets/logo.png" alt="">
     <ul class="nav">
       
       <li class="navlink"><a href="#home">Home</a></li>
@@ -56,7 +88,7 @@
     <div class="burger">
       <i class="fas fa-bars"></i>
 
-    </div>
+    </div> -->
   </header>
 
    <section class="banner" id="home">
@@ -1255,6 +1287,8 @@ function cipav(){
 <script src="./slick-1.8.1/slick/slick.js"></script>
 <script src="./slick-1.8.1/slick/slick.min.js"></script>
 <script src="./datosUtiles.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 <script src="./burger.js"></script>
 
 </body>
