little fix with css library

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <title>SOS Red</title>
    <!-- Compiled and minified CSS -->
-   <link rel="stylesheet" href="css/cosafea.css">
+   <link rel="stylesheet" href="css/materialize-onlynavbar.css">
    <link rel="stylesheet" href="styles.css">
 
    <!-- Compiled and minified JavaScript -->
