terminado en teoria para index

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <h1 class="banner-title" style="font-size: 4vw !important; margin: 0px 0px 00px;">INNOVACIÓN TECNOLÓGICA CONSTANTE</h1>
                   <h2 class="banner-subtitle" style="padding-top: 0px; font-size: 2vw; padding-bottom: 5px;">¡Ingresá a nuestra WebApp!</h2>
                   <button onclick="window.location.href='https://tuasistencia.redsos.com.ar/home/login'"  class="banner-button banner-button-1"
-                  " id="ingrese"><strong class="center-text">Ingrese aquí</strong></button>
+                  " id="ingrese"><strong class="center-text">Ingresar</strong></button>
               </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
               <div class="banner-content-2">
                   <h1 class="banner-title">ASISTIMOS EN LOS <br>MOMENTOS CLAVES</h1>
                   <h2 class="banner-subtitle" >¡Conocé todos nuestras asistencias!</h2>
-                  <button onclick="window.location.href='#servicios'" class="banner-button" id="btn-servicios"><strong class="center-text">Ingrese aquí</strong></button>
+                  <button onclick="window.location.href='#servicios'" class="banner-button" id="btn-servicios"><strong class="center-text">Ingresar</strong></button>
               </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
               <div class="banner-content-3">
                   <h1 class="banner-title">SOMOS LA RED<br>MÁS GRANDE DEL PAÍS</h1>
                   <h2 class="banner-subtitle">¡Ingresá a nuestra WebApp!</h2>
-                  <button onclick="window.location.href='https://tuasistencia.redsos.com.ar/home/login'"  class="banner-button" id="ingrese"><strong class="center-text">Ingrese aquí</strong></button>
+                  <button onclick="window.location.href='https://tuasistencia.redsos.com.ar/home/login'"  class="banner-button" id="ingrese"><strong class="center-text">Ingresar</strong></button>
               </div>
           </div>
         </div>
@@ -766,13 +766,17 @@
       <img src="./assets/oficina.jpg" alt="" srcset="">
       <span class="modal-preview-tittle">MUDANZA SEDE BS AS</span>
       <span class="modal-preview-subtittle">¡Un nuevo avance!</span>
+      <p class="modal-preview-mobile-text">Desarrollamos nuestra WebApp con tecnología PWA, para que puedas realizar el pedido de tu servicio desde cualquier dispositivo...</p>
+      <span class="modal-preview-link">Más información</span>
     </button>
   </div>
   <div class="modal-mobile">
     <button class="left btn btn-primary" data-toggle="modal" data-target="#modalSOS">
       <img src="./assets/sosrosa2.png" alt="" srcset="">
-      <span class="modal-preview-tittle">WEBAPP</span>
-      <span class="modal-preview-subtittle">¡Seguimos innovando!</span>
+      <h4 class="modal-preview-tittle">WEBAPP</h4>
+      <h5 class="modal-preview-subtittle">¡Seguimos innovando!</h5>
+      <p class="modal-preview-mobile-text">Desarrollamos nuestra WebApp con tecnología PWA, para que puedas realizar el pedido de tu servicio desde cualquier dispositivo...</p>
+      <span class="modal-preview-link">Más información</span>
     </button>
   </div>
 
@@ -781,6 +785,8 @@
       <img src="./assets/covid.jpg" alt="" srcset="">
       <span class="modal-preview-tittle">COVID-19</span>
       <span class="modal-preview-subtittle">Queremos contarte cómo seguimos trabajando</span>
+      <p class="modal-preview-mobile-text">Continuamos brindando todos nuestros servicios, respetando los protocolos de distanciamiento social dictaminados.</p>
+      <span class="modal-preview-link">Más información</span>
     </button>
   </div>
 
@@ -1202,9 +1208,11 @@
     </div>
     <div class="rights" style="padding-top: 1.5vw;">
       <p>
-       <span><b>S.O.S Red de Asistencia</span> <span>Todos los derechos reservados</span></b></p>
+       <span><b>S.O.S Red de Asistencia</span> <br><span>Todos los derechos reservados</span></b></p>
       <p>Desarrollado por <a href="" style="color: white; text-decoration: none;"> Damsquad</a></p>
     </div>
+
+
   
   </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
