--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
        desde cualquier dispositivo...
        <br>
        <button      
-        class="btn btn-primary modal-preview-button data-toggle="modal" data-target="#modalSOS">
+        class="btn btn-primary modal-preview-button" data-toggle="modal" data-target="#modalSOS">
          Más información</button>
      </p>
     </div>
@@ -1204,7 +1204,7 @@
   
     <div class="links">
       <button id="myBtn" >Datos útiles</button>
-      <a href="www.wikipedia.com">Sugerencias y comentarios</a>
+      <a href="form-comentarios.php">Sugerencias y comentarios</a>
     </div>
     <div class="rights" style="padding-top: 1.5vw;">
       <p>
