Changes to menu, from right
-Fixed responsive modals
-Fixed menu
-Added link
-Changes to mobile version

--- a/index.html
+++ b/index.html
@@ -33,19 +33,29 @@
 
 <body>
 
+
+
   <header>
     <div class="navbar-fixed">
       <nav>
         <div class="nav-wrapper">
+          <div class="mobile-container">
+            <span style="display: flex; flex-direction: row; align-items: center;">
+              
+<svg id="profile" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#fff"><path d="M10 12c-7.3 0-9 5.5-9 5.5v1h18v-1S17.3 12 10 12z"/><circle cx="10" cy="6" r="5"/></svg>
+          <a href="https://consultadeservicios.redsos.com.ar/" target="_blank" id="portal-corporativo">Portal<br>corporativo</a>
+            </span>
+
           <a href="#!" class="brand-logo"><img class="brand-logo" src="./assets/logo2.png" alt=""></a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="fas fa-bars"></i></a>
+        </div>
           <ul class="right hide-on-med-and-down">
             <li class="navlink"><a href="#home">Home</a></li>
             <li class="navlink"><a href="#servicios">Servicios</a></li>
             <li class="navlink"><a href="#quienes">Quiénes somos</a></li>
             <li class="navlink"><a href="#novedades">Novedades</a></li>
             <li class="navlink"><a href="#separte">Sé parte</a></li>
-            <li class="navlink"><a href="#portalcorporativo">Portal Corporativo</a></li>
+            <li class="navlink"><a href="https://consultadeservicios.redsos.com.ar/" target="_blank">Portal Corporativo</a></li>
           </ul>
         </div>
       </nav>
@@ -58,7 +68,7 @@
       <li class="navlink"><a href="#quienes">Quiénes somos</a></li>
       <li class="navlink"><a href="#novedades">Novedades</a></li>
       <li class="navlink"><a href="#separte">Sé parte</a></li>
-      <li class="navlink"><a href="#portalcorporativo">Portal Corporativo</a></li>
+      <li class="navlink"><a href="#portalcorporativo" id="portal">Portal Corporativo</a></li>
     </ul>
 
   </header>
@@ -948,7 +958,7 @@
   </section>
 
 
-  <section class="contacto">
+  <section class="contacto" id="separte">
 
     <h1 style="display: flex; align-items: center;
       justify-content: center;">Ponete en contacto</h1>
