--- a/form-comentarios.html
+++ b/form-comentarios.html
@@ -1,67 +1,3 @@
-<?php
-
-$errors = [];
-$errorMessage = '';
-
-if (!empty($_POST)) {
-    $name = $_POST['nombre'];
-    $apellido = $_POST['apellido'];
-    $localidad = $_POST['localidad'];
-    $patente = $_POST['patente'];
-    $company = $_POST['company'];
-    $email = $_POST['email'];
-    $message = $_POST['message'];
-    $celular = $_POST['celular'];
-    $telefono = $_POST['telefono'];
-    $preferencia_contacto = $_POST['preferencia-contacto'];
-
-    if (empty($name)) {
-        $errors[] = 'Complete el campo nombre';
-    }
-
-    if (empty($email)) {
-        $errors[] = 'Email is empty';
-    } else if (!filter_var($email, FILTER_VALIDATE_EMAIL)) {
-        $errors[] = 'Email is invalid';
-    }
-
-    if (empty($message)) {
-        $errors[] = 'Message is empty';
-    }
-
-
-    if (empty($errors)) {
-        $toEmail = 'mesadeentradas@redsos.com.ar';
-        $emailSubject = 'Nuevo email desde formulario de comentarios';
-// Para enviar un correo HTML, debe establecerse la cabecera Content-type
-        $headers  = 'MIME-Version: 1.0' . "\r\n";
-        $headers .= 'Content-type: text/html; charset=iso-8859-1' . "\r\n";
-        $bodyParagraphs = [
-            "Nombre: {$name}", 
-            "Apellido: {$apellido}",
-            "Localidad: {$localidad}",
-            "Patente: {$patente}",
-            "Compañia: {$company}",
-            "Celular: {$celular}",
-            "Telefono: {$telefono}",
-            "Email: {$email}",
-            "Preferencia de Contacto: {$preferencia_contacto}",
-            "Mensaje: {$message}",
-        ];
-        $body = join(PHP_EOL, $bodyParagraphs);
-
-        if (mail($toEmail, $emailSubject, $body, $headers)) {
-            header('Location: index.html');
-        } else {
-            $errorMessage = 'Hubo un error al enviar el correo. Intentelo nuevamente.';
-        }
-    } else {
-        $allErrors = join('<br/>', $errors);
-        $errorMessage = "<p style='color: red;'>{$allErrors}</p>";
-    }
-}
-
-?>
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -86,28 +22,28 @@ if (!empty($_POST)) {
             <?php echo((!empty($errorMessage)) ? $errorMessage : '') ?>
 
             <div class="container">
-                <form action="#" method="post">
+                <form id="contact-form" method="post" action="contact-form-handler.php">
                     <!-- first row -->
                     <div class="form-row mt-5">
                         <div class="col-md-4 col-xs-12">
                             <div class="form-group">
                               <label for="nombre">Nombre</label>
                               <input type="text"
-                                class="form-control" name="nombre" id="" aria-describedby="helpId" placeholder="Ingrese su nombre">
+                                class="form-control" name="name" id="" aria-describedby="helpId" placeholder="Ingrese su nombre">
                             </div>
                         </div>
                         <div class="col-md-4 col-xs-12">
                             <div class="form-group">
                                 <label for="apellido">Apellido</label>
                                 <input type="text"
-                                  class="form-control" name="apellido" id="" aria-describedby="helpId" placeholder="Ingrese su apellido">
+                                  class="form-control" name="lastname" id="" aria-describedby="helpId" placeholder="Ingrese su apellido">
                               </div>
                         </div>
                         <div class="col-md-4 col-xs-12">
                             <div class="form-group">
                                 <label for="localidad">Localidad</label>
                                 <input type="text"
-                                  class="form-control" name="localidad" id="" aria-describedby="helpId" placeholder="Ingrese su localidad de residencia">
+                                  class="form-control" name="email" id="" aria-describedby="helpId" placeholder="Ingrese su localidad de residencia">
                               </div>
                         </div>
                     </div>
