--- a/form-comentarios.html
+++ b/form-comentarios.html
@@ -43,7 +43,7 @@
                             <div class="form-group">
                                 <label for="localidad">Localidad</label>
                                 <input type="text"
-                                  class="form-control" name="email" id="" aria-describedby="helpId" placeholder="Ingrese su localidad de residencia">
+                                  class="form-control" name="visitor_email" id="" aria-describedby="helpId" placeholder="Ingrese su localidad de residencia">
                               </div>
                         </div>
                     </div>
