--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </div>
           <ul class="right hide-on-med-and-down">
             <li class="navlink"><a href="#home">Home</a></li>
-            <li class="navlink"><a href="#servicios">Servicios</a></li>
+            <li class="navlink"><a href="#servicios">Asistencias</a></li>
             <li class="navlink"><a href="#quienes">Quiénes somos</a></li>
             <li class="navlink"><a href="#novedades">Novedades</a></li>
-            <li class="navlink"><a href="#separte">Sé parte</a></li>
+            <li class="navlink"><a href="#separte">Contactanos</a></li>
             <li class="navlink"><a href="https://consultadeservicios.redsos.com.ar/" target="_blank">Portal Corporativo</a></li>
           </ul>
         </div>
@@ -64,10 +64,10 @@
 
     <ul class="sidenav" id="mobile-demo">
       <li class="navlink"><a href="#home">Home</a></li>
-      <li class="navlink"><a href="#servicios">Servicios</a></li>
+      <li class="navlink"><a href="#servicios">Asistencias</a></li>
       <li class="navlink"><a href="#quienes">Quiénes somos</a></li>
       <li class="navlink"><a href="#novedades">Novedades</a></li>
-      <li class="navlink"><a href="#separte">Sé parte</a></li>
+      <li class="navlink"><a href="#separte">Contactanos</a></li>
       <li class="navlink"><a href="#portalcorporativo" id="portal">Portal Corporativo</a></li>
     </ul>
 
@@ -154,8 +154,7 @@
           <img src="./content/whatsapp.png" alt="whatsapp logo" class="small-img" id="hide">
           <h3 class="contact-title">WebApp</h3>
           <p class="contact-p">Ingresá a la WebApp y solicitá tu servicio</p>
-          <button class="hidden-button"
-            onclick="window.location.href='https://tuasistencia.redsos.com.ar/home/login'">Ingresar</button>
+          <button class="hidden-button"><a href="https://tuasistencia.redsos.com.ar/home/login" target="_blank" rel="noopener noreferrer">Ingresar</a></button>
         </div>
       </div>
 
@@ -165,7 +164,7 @@
           <img src="./content/whatsapp.png" alt="whatsapp logo" class="small-img">
           <h3 class="contact-title">WhatsApp</h3>
           <p class="contact-p">¡Comunícate con nosotros por WhatsApp!</p>
-          <button class="hidden-button" onclick="window.location.href='https://bit.ly/2HQWJTE'">Contactar</button>
+          <button class="hidden-button"><a href="https://bit.ly/2HQWJTE" target="_blank" rel="noopener noreferrer">Contactar</a></button>
         </div>
       </div>
 
@@ -179,7 +178,7 @@
           <img src="./content/0800.png" alt="webapp logo" class="small-img">
           <h3 class="contact-title">Línea directa por cliente</h3>
           <p class="contact-p">Llamanos y ponete en contacto para que <br> podamos resolver tus problemas</p>
-          <button class="hidden-button" onclick="window.location.href='numeros-clientes.html'">Llamar</button>
+           <button class="hidden-button" onclick="window.location.href='numeros-clientes.html'">Llamar</button>
         </div>
       </div>
 
@@ -209,14 +208,14 @@
         <img class="zoom-in" src="./assets/services/Asistencia Vehicular.jpg" id="vehicular" alt="">
         <div class="services-box" id="vehicular-text">
           <h1>Asistencia Vehicular</h1>
-          <h2>Circulá tranquilo con la tranquilidad de contar con la mejor asistencia las 24 hs. Servicios de urgencias
+          <h2>Circulá con la tranquilidad de contar con la mejor asistencia las 24 hs. Servicios de urgencias
             mecánicas y traslados en todo el país para cualquier tipo de vehículo: automóviles, motos, camiones, para
             resolver cualquier desperfecto, siniestro o urgencia que pueda ocurrir.</h2>
         </div>
         <img src="./assets/services/Asistencia non-stop.jpg" id="non-stop" alt="">
         <div class="services-box" id="non-stop-text">
           <h1>Asistencia Non Stop</h1>
-          <h2>Circulá tranquilo. Te asistimos en la vía pública con tu bicicleta, monopatín o cualquier dispositivo de
+          <h2>Te asistimos en la vía pública con tu bicicleta, monopatín o cualquier dispositivo de
             movilidad urbana. Te brindamos servicios para tu vehículo y para que puedas llegar a tu destino ante
             averías, accidentes o robos. </h2>
         </div>
@@ -250,14 +249,14 @@
           <h1>Asistencia de Salud</h1>
           <h2>La mejor cobertura de servicios de salud, para asistirte ante cualquier inconveniente médico. Servicio de
             ambulancia hasta el hospital más cercano, médicos especialistas, exámenes complementarios y mucho más para
-            que estés protegido ante cualquier hecho fortuito. averías, accidentes o robos.
+            que estés protegido ante cualquier hecho fortuito, averías, accidentes o robos.
           </h2>
         </div> <img src="./assets/services/Asistencia de tecnologia.jpg" alt="">
         <div class="services-box">
           <h1>Asistencia en Tecnología</h1>
-          <h2>Estamos presentes ante cualquier problema que cualquiera de tus dispositivos pueda presentarte. Enviando
+          <h2>Estamos presentes ante inconvenientes en cualquiera de tus dispositivos pueda presentarte. Enviando
             la problemática a través de un chat podrás ser asistido y orientado por un técnico especializado en forma
-            remota para arreglar o configurar sus dispositivos.
+            remota para reparar o reconfigurar sus dispositivos.
           </h2>
         </div>
       </div>
@@ -718,7 +717,7 @@
       <div class="slide"><img src="./content/Logos de clientes/Metropolitana.png"></div>
       <div class="slide"><img src="./content/Logos de clientes/Mini.PNG"></div>
       <div class="slide"><img src="./content/Logos de clientes/Nacion.PNG"></div>
-      <div class="slide"><img src="./content/Logos de clientes/Nativa.png"></div>
+      <div class="slide"><img src="./content/Logos de clientes/Nativa.jpg"></div>
       <div class="slide"><img src="./content/Logos de clientes/Orbis.PNG"></div>
       <div class="slide"><img src="./content/Logos de clientes/Peugeot.PNG"></div>
       <div class="slide"><img src="./content/Logos de clientes/Prosegur.PNG"></div>
@@ -772,7 +771,13 @@
         <span style="    font-weight: 600;
      font-size: 16pt;
      color: white;
-     line-height: 30pt;">¡Un nuevo avance!</span>
+     line-height: 30pt;">¡Un nuevo avance!
+    </span>
+        <span style="    font-weight: 600;
+     font-size: 10pt;
+     color: white;
+     line-height: 20pt;">Más información
+    </span>
 
 
       </button>
@@ -1030,7 +1035,7 @@
           recepcionros@redsos.com.ar
         </button>
         <button class="map-button" id="sede-cipav" onclick="cipav();">
-          <span style="color: #BB0222; font-weight: 600;">CIPAV <br>(Centro Integra de Prestadores de Asistencia
+          <span style="color: #BB0222; font-weight: 600;">CIPAV <br>(Centro Integral de Prestadores de Asistencia
             Vehicular)</span> <br>
           Av Intendente Francisco Rabanal 1732, CABA<br>
 
@@ -1209,13 +1214,19 @@
   </div>
 
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://bit.ly/2HQWJTE" class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i>
+</a>
+
+
 
   <!-- Footer -->
   <footer class="page-footer">
 
     <div class="links">
       <button id="myBtn">Datos útiles</button>
-      <a href="form-comentarios.php">Sugerencias y comentarios</a>
+      <a href="form-comentarios.html">Consultas y sugerencias</a>
     </div>
     <div class="rights" style="padding-top: 1.5vw;">
       <p>
@@ -1284,16 +1295,16 @@
 
     var map = document.getElementById('map-content');
 
+    function bsas() {
+      map.src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.7061746727595!2d-58.40290094898482!3d-34.63686476666428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb114945bca5%3A0x38e65d5c947bf926!2sLuna%2049%2C%20C1437FEC%20CABA!5e0!3m2!1ses!2sar!4v1602693207792!5m2!1ses!2sar";
+    }
+
     function cordoba() {
       map.src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.712801250126!2d-64.23620044937992!3d-31.394481681320233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298cee4accd5d%3A0x4eaa0527b9470853!2sAv.%20Sagrada%20Familia%20502%2C%20X5003FGL%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1602692475575!5m2!1ses!2sar";
     }
 
     function rosario() {
       map.src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3349.0604425386205!2d-60.66649138481425!3d-32.92300128092812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b654ae16bc21a1%3A0xadcddd71fe834ae!2sLuis%20C%C3%A1ndido%20Carballo%20194%2C%20S2013CTV%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606759724625!5m2!1ses-419!2sar";
-    }
-
-    function bsas() {
-      map.src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.7061746727595!2d-58.40290094898482!3d-34.63686476666428!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccb114945bca5%3A0x38e65d5c947bf926!2sLuna%2049%2C%20C1437FEC%20CABA!5e0!3m2!1ses!2sar!4v1602693207792!5m2!1ses!2sar";
     }
 
     function cipav() {
