--- a/index.html
+++ b/index.html
@@ -1126,13 +1126,11 @@
             <div id="datosUtilesHogar" class="hidden modal-datos-utiles">
               <h1 class="modal-datos-utiles-tittle">Datos útiles</h1>
               <h3>Hogar</h3>
-              <br>
               <ol>
                 <li><strong>ELECTRICIDAD<br /></strong>Use luces de bajo consumo. Ahorran hasta un 75% de
                   energ&iacute;a.<br />Gradúe la temperatura de sus ambientes.<br />No exponga los artefactos al
                   m&aacute;ximo de su potencia.<br />Desconecte siempre la llave general para hacer una
                   reparaci&oacute;n.</li>
-                <br>
                 <li><strong>CERRAJERÍA</strong>
                   <br />Para que las cerraduras duren m&aacute;s tiempo, realice el mantenimiento
                   frecuentemente.<br />Es recomendable tener por lo menos 2 copias de cada una de sus llaves.
@@ -1141,7 +1139,6 @@
                   <br />Instale en la puerta de su hogar un cerrojo de cadena, pudiendo as&iacute;, abrir la puerta de
                   forma parcial.
                 </li>
-                <br>
                 <li><strong>PLOMER&Iacute;A</strong>
                   <br />Recuerde que el agua potable es un bien que escasea, no lo derroche, repare las goteras y
                   p&eacute;rdidas en las ca&ntilde;er&iacute;as.<br />
@@ -1182,11 +1179,8 @@
                     <li>Equipo de seguridad.</li>
                   </ul>
                 </li>
-                <br>
                 <li>Infórmese de la previsión meteorológica de la zona donde pretende navegar.</li>
-                <br>
                 <li>Realice un plan de navegación y comuníquelo al club náutico</li>
-                <br>
                 <li>Informe las características de la embarcación, en el punto de salida y de destino:
                   <ul>
                     <li>Nombre del barco.</li>
@@ -1195,7 +1189,7 @@
                     <li>Nacionalidad y distitivo de llamada.</li>
                     <li>Número y nombre las personas a bordo.</li>
                     <li>Equipos de comunicaciones que se disponen.</li>
-                    <li>Teléfono de contacto y personas con las que contactar en caso de emergencia</li>
+                    <li>Teléfono de contacto y personas con las que contactar en caso de emergencia.</li>
                   </ul>
                 </li>
               </ol>
