Changes to form links
Redirects to current forms

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
+     <!--   <li data-target="#myCarousel" data-slide-to="3"></li>-->
 
       </ol>
 
@@ -95,9 +95,11 @@
                 CONSTANTE</h1>
               <h2 class="banner-subtitle" style="padding-top: 0px; font-size: 2vw; padding-bottom: 5px;">¡Ingresá a
                 nuestra WebApp!</h2>
-              <button onclick="window.location.href='https://tuasistencia.redsos.com.ar/home/login'"
-                class="banner-button banner-button-1" " id=" ingrese"><strong
-                  class="center-text">Ingresar</strong></button>
+              <button
+                class="banner-button banner-button-1" id=" ingrese">
+                <a href="https://tuasistencia.redsos.com.ar/home/login" target="_blank">
+                <strong
+                  class="center-text">Ingresar</strong></button></a>
             </div>
           </div>
         </div>
@@ -107,14 +109,14 @@
           <div class="text-in-carousel-2">
             <div class="banner-content-2">
               <h1 class="banner-title">ASISTIMOS EN LOS <br>MOMENTOS CLAVES</h1>
-              <h2 class="banner-subtitle">¡Conocé todos nuestras asistencias!</h2>
+              <h2 class="banner-subtitle">¡Conocé todas nuestras asistencias!</h2>
               <button onclick="window.location.href='#servicios'" class="banner-button" id="btn-servicios"><strong
                   class="center-text">Ingresar</strong></button>
             </div>
           </div>
         </div>
 
-        <div class="item">
+    <!--    <div class="item">
           <img src="./assets/banner-3.png" alt="New York" style="width:100%;">
           <div class="text-in-carousel-3">
             <div class="banner-content-3">
@@ -125,7 +127,7 @@
             </div>
           </div>
         </div>
-
+-->
         <div class="item">
           <img src="./assets/banner-web-osa.png" alt="New York" style="width:100%;">
         </div>
@@ -972,15 +974,15 @@
 
 
       <ul>
-        <li onclick="window.location.href='form-cv.html'">
-          <a>
+        <li>
+          <a href="https://www.redsos.com.ar/dejar-cv.html" target="_blank">
             <img class="icon" src="./assets/talento y cultura-04.png" style="left: 6px;"></img>
           </a>
           <h4>Talento y cultura</h4>
           <h5>Buscamos nuevos talentos, envianos tu CV</h5>
         </li>
-        <li onclick="window.location.href='form-prestadores.html'">
-          <a>
+        <li>
+          <a href="https://www.redsos.com.ar/dejar-cv.html">
             <img class="icon" src="./assets/prestadores.png" style="left: 3px;
       bottom: 5px;
       "></img>
@@ -988,8 +990,8 @@
           <h4>Prestadores y Proveedores</h4>
           <h5>Sé parte de nuestra red de prestadores </h5>
         </li>
-        <li onclick="window.location.href='form-comentarios.html'">
-          <a>
+        <li>
+          <a href="https://www.redsos.com.ar/sugerencias-y-reclamos.html" target="_blank">
             <img class="icon" src="./assets/signo de pregunta-04.png"></img>
           </a>
           <h4>Consultas y sugerencias</h4>
