cambios 19-12 del google drive, fix a la pantalla que se arrastra y otros

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                     style="width: 100%; max-height: 100%;">
                 </div>
                 <div class="flip-card-back">
-                  <img src="src/content/Exported/Garantía.png" alt="Garantía" style="width: 100%; max-height: 100%;">
+                  <img src="src/content/Exported/Garantia.png" alt="" style="width: 100%; max-height: 100%;">
                 </div>
               </div>
             </div>
@@ -587,7 +587,7 @@
                     style="width: 100%; max-height: 100%;">
                 </div>
                 <div class="flip-card-back">
-                  <img src="src/content/Exported/Garantía.png" alt="Garantía" style="width: 100%; max-height: 100%;">
+                  <img src="src/content/Exported/Garantia.png" alt="Garantía" style="width: 100%; max-height: 100%;">
                 </div>
               </div>
             </div>
@@ -1218,7 +1218,7 @@ margin-top: 30px; margin-right: 20px; margin-bottom: 0px;
 
 <div class="links">
   <button id="myBtn">Datos útiles</button>
-  <a href="form-comentarios.html">Consultas y sugerencias</a>
+  <a href="https://forms.gle/JDyaPrF6P22Dfwcx8">Consultas y sugerencias</a>
 </div>
 <div class="rights" style="padding-top: 1.5vw;">
   <p>
