fixed numero de telefono

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <img src="src/content/red.png" alt="" class="sweep-this">
         <div class="contact-column-text">
           <img src="src/content/whatsapp.png" alt="whatsapp logo" class="small-img" id="hide">
-          <h3 class="contact-title" style="color: white !important; text-decoration: none !important; font-size: 5vw !important;">0800 333 6524</h3>
+          <h3 class="contact-title" style="@media screen and (max-width: 480px) {color: white !important; text-decoration: none !important; font-size: 5vw !important;}">0800 333 6524</h3>
           <p class="contact-p">Llamanos y ponete en contacto para que <br> podamos resolver tus problemas</p>
           <button onclick="window.location.href='tel:08003336524'" class="hidden-button">Llamar</button>
         </div>
