--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         </div> <img src="src/assets/services/Asistencia de tecnologia.jpg" alt="">
         <div class="services-box">
           <h1>Asistencia en Tecnología</h1>
-          <h2>Estamos presentes ante inconvenientes en cualquiera de tus dispositivos pueda presentarte. Enviando
+          <h2>Estamos presentes ante cualquier inconveniente que tus dispositivos puedan presentar. Enviando
             la problemática a través de un chat podrás ser asistido y orientado por un técnico especializado en forma
             remota para reparar o reconfigurar sus dispositivos.
           </h2>
