fixed the webapp link even if the client sent it incorrect from the start

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 nuestra WebApp!</h2>
               <button
                 class="banner-button banner-button-1" id=" ingrese">
-                <a href="https://tuasistencia.redsos.com.ar/home/login" target="_blank">
+                <a href="https://tuasistencia.redsos.com.ar" target="_blank">
                 <strong
                   class="center-text">Ingresar</strong></button></a>
             </div>
@@ -159,7 +159,7 @@
           <img src="src/content/whatsapp.png" alt="whatsapp logo" class="small-img" id="hide">
           <h3 class="contact-title">WebApp</h3>
           <p class="contact-p">Ingresá a la WebApp y solicitá tu servicio</p>
-          <button class="hidden-button"><a href="https://tuasistencia.redsos.com.ar/home/login" target="_blank" rel="noopener noreferrer">Ingresar</a></button>
+          <button class="hidden-button"><a href="https://tuasistencia.redsos.com.ar" target="_blank" rel="noopener noreferrer">Ingresar</a></button>
         </div>
       </div>
 
