cambios nuevos sin QR

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
 
          <div class="item">
-          <img src="src/assets/banner-2-2.png" alt="Chicago" style="width:100%;">
+          <img src="src/assets/banner-2-3.jpg" alt="Chicago" style="width:100%;">
           <div class="text-in-carousel-2">
             <div class="banner-content-2">
               <h1 class="banner-title">ASISTIMOS EN LOS <br>MOMENTOS CLAVES</h1>
@@ -141,7 +141,6 @@
     </div>
 
   </section>
-
 
   <section class="contact" style="position: relative; top: -3px;">
 
@@ -947,12 +946,15 @@
         <img src="src/content/Logos de clientes/DS.PNG">
           </li>
       <li class="splide__slide">
-
         <img src="src/content/Logos de clientes/Ducati.PNG">
-          </li>
+      </li>
       <li class="splide__slide">
 
         <img src="src/content/Logos de clientes/El norte.PNG">
+          </li>
+      <li class="splide__slide">
+
+        <img src="src/content/Logos de clientes/ELPROGRESO.PNG">
           </li>
       <li class="splide__slide">
 
@@ -1007,17 +1009,20 @@
         <img src="src/content/Logos de clientes/Land Rover.PNG">
       </li>
       <li class="splide__slide">
-          <img src="src/content/Logos de clientes/Lexus.PNG">
-        </li>
-        <li class="splide__slide">
-            <img src="src/content/Logos de clientes/La Holando.PNG">
-          </li>
-          <li class="splide__slide">
-              <img src="src/content/Logos de clientes/Luz y Fuerza.PNG">
-            </li>
-            <li class="splide__slide">
-                <img src="src/content/Logos de clientes/Mercantil Andina.PNG">
-              </li>
+        <img src="src/content/Logos de clientes/Lexus.PNG">
+      </li>
+      <li class="splide__slide">
+        <img src="src/content/Logos de clientes/La Holando.PNG">
+      </li>
+      <li class="splide__slide">
+        <img src="src/content/Logos de clientes/LIBRA.PNG">
+      </li>
+      <li class="splide__slide">
+        <img src="src/content/Logos de clientes/Luz y Fuerza.PNG">
+      </li>
+      <li class="splide__slide">
+        <img src="src/content/Logos de clientes/Mercantil Andina.PNG">
+      </li>
               <li class="splide__slide">
                   <img src="src/content/Logos de clientes/Mercedes.PNG">
                 </li>
@@ -1067,9 +1072,6 @@
                                                           <li class="splide__slide">
                                                               <img src="src/content/Logos de clientes/Smart.PNG">
                                                             </li>
-                                                            <li class="splide__slide">
-                                                                <img src="src/content/Logos de clientes/Sura.PNG">
-                                                              </li>
                                                               <li class="splide__slide">
                                                                   <img src="src/content/Logos de clientes/Toyota.PNG">
                                                                 </li>
@@ -1116,10 +1118,15 @@
 
 <section class="novedades" id="novedades">
 
+    
+
+
 <div class="logos-title">
   <h1>Novedades</h1>
   <h2>Te contamos las últimas novedades y dónde obtener más información.</h2>
 </div>
+
+
 
 <div class="grid-container" id="novedades-desktop">
   <button class="left btn btn-primary" data-toggle="modal" data-target="#modalOficinas" style="display: flex; flex-direction: column; justify-content: flex-end;
@@ -1216,6 +1223,7 @@ margin-top: 30px; margin-right: 20px; margin-bottom: 0px;
 
 </div>
 
+<iframe style="padding: 1vw; height: 50vh;" width="90%" src="https://www.youtube.com/embed/MbIjLSV51AU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
