--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
      <!--   <li data-target="#myCarousel" data-slide-to="3"></li>-->
 
       </ol>
@@ -134,7 +135,9 @@
         <div class="item">
           <img src="src/assets/banner-web-osa.png" alt="New York" style="width:100%;">
         </div>
-
+        <div class="item">
+          <img src="src/assets/banner-5.jpg" alt="New York" style="width:100%;">
+        </div>
       </div>
 
     </div>
